--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderEspecieMC.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderEspecieMC.cshtml
@@ -60,6 +60,20 @@
         return list;
     }
 
+    _renderListaEspecies.fnAdd = function (data) {
+        if (data.COD_ESPECIES != "0002226") {
+            data.VOLUMEN_MOVILIZADO = data.VOLUMEN_MOVILIZADO == "" ? "0" : data.VOLUMEN_MOVILIZADO;
+            data.NUMERO_INDIVIDUOS = data.NUMERO_INDIVIDUOS == "" ? "0" : data.NUMERO_INDIVIDUOS;
+            data.RegEstado = 1;
+
+            _renderListaEspecies.dtRenderListInforme.rows.add([data]).draw();
+            _renderListaEspecies.dtRenderListInforme.page('last').draw('page');
+        }
+        else {
+            utilSigo.toastWarning("Aviso", "Seleccione una especie");
+        }
+    }
+
     _renderListaEspecies.fnGetListEliTABLA = function () { return _renderListaEspecies.tbEliTABLA }
 
    $(document).ready(function () {
