--- a/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderListPOA.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/ManResolucion/_Shared/_generic/_renderListPOA.cshtml
@@ -3,24 +3,7 @@
 <script type="text/javascript">
     var _renderPOA = {};
 
-    /*
-    this.ddListarPCVertice = function () {
-        var pcList = [];
-        $('#txtParcelaRD').find('option').remove().end();
-        var parcela = _frmParcela.fnGetList();
-        var countFilas = parcela.length;
-        if (countFilas > 0) {
-            $.each(parcela, function (i, o) {
-                //alert(parcela[i].PCA);
-                //pcList.push(utilSigo.fnConvertArrayToObject(parcela[i].PCA));
-                $('#txtParcelaRD').append($('<option>', {
-                    value: parcela[i].PCA,
-                    text: parcela[i].PCA
-                }));
-            });
-        }
-    }*/
-    _renderPOA.fncParcelas = function (codEnSelect) {
+    _renderPOA.fncParcelas = function () {
         var idPoa = _renderInfracciones.frm.find("#ddlPOA").val();
         var codResodirec = ManRD_AddEdit.frm.find("#hdfCodResodirec").val();
 
@@ -66,7 +49,7 @@
                                  {
                                      @class = "form-control form-control-sm",
                                      @id = "ddlPOA",
-                                     @onchange = "_renderPOA.fncParcelas('')"
+                                     @onchange = "_renderPOA.fncParcelas()"
                                  })
             }
             else
