Cambios de Etiqueta de Consultas

--- a/SIGOFCv3/Areas/General/Views/Reportes/Reporte.cshtml
+++ b/SIGOFCv3/Areas/General/Views/Reportes/Reporte.cshtml
@@ -690,7 +690,7 @@
                                 <tr>
                                     <th colspan="19" class="text-sm-left">
                                         <div class="form-inline">
-                                            <strong>Reporte Solicitud FEMA</strong>
+                                            <strong>Consulta Solicitud FEMA</strong>
                                         </div>
                                     </th>
                                 </tr>
